--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,9 @@
         </style>
     </head>
     <body>
-        <header style="text-align:center; font-size:40px;"><br> Konichiwa <br>  <br></header> 
+        <header style="text-align:center; font-size:40px;"><br> Konichiwa <br>
+		Wishing you happy lakshimi pooja😇
+		<br>  <br></header> 
 
 
 
