--- a/index2.html
+++ b/index2.html
@@ -74,6 +74,7 @@ please take care of yourself well and please be safe
 
     <br><div class="mypap3" style="background-color: rgb(37, 33, 33);"><a href="https://forms.gle/y84RMg7SoHqhwRjH8"  ><span   >WANNA SAY SOMETHING TO <br> YATO <br> <b>click here</b> </span></a> </div>  
     <br><div class="mypap3"><a href="https://forms.gle/BYcWLsfzv9LyCBFRA" ><span   ><b>SENT A PICTURE click here</b> </span></a> </div><br><br>
+ <br><div class="mypap3"><a href="https://youtu.be/zPlgynKYld0?feature=shared" ><span   ><b>Something... click here</b> </span></a> </div><br><br>
 
 			   <!--- end of sheets ------>
 	</div> </div>
