--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,7 @@ other stuff I don't care about this is my final decision 💁🏻‍♀️</i><b
  <i>where you stand?</i><br>--- i dont gonna say im gonna show<br><br>
   <i>And hey stop acting like an angel, you don't have to lie or fake things to me ...</i><br>--- huh! potato<br>what in your mind from start,, why should i need to act.<br>
   i said you manytimes lying to you is like lying to myself<br>angel -_- baaah!!!! still you thinking im not real<br> 3 days back a girl(some random) in train asked my number i gave her my mother number<br>
-  still few saying im acting innocent it doesnt bother<br>what run in mind is when you im an actor<br> -_-  stupid potato<br>
+  still few saying im acting innocent it doesnt bother, and i helped a few amount of low grade students without expecting anything teachers call me im with a plan ,,, huh! peace is never an option<br>what run in mind is when you said im acting anjel and  im an actor<br> -_-  stupid potato<br>
   <i>And if you choose to do social services that's good but I will say first you should help yourself.... </i><br>its not social service its an useful educational project...<br>
         <hr>
         
