--- a/index2.html
+++ b/index2.html
@@ -38,18 +38,20 @@ other stuff I don't care about this is my final decision 💁🏻‍♀️</i><b
    <i> <br> Where you want to be ,<br></i> ---the right question is when you in japan?.... my answers simply i said somanytimes in past, (its fast as possible)<br><br>
  <i>where you stand?</i><br>--- i dont gonna say im gonna show<br><br>
   <i>And hey stop acting like an angel, you don't have to lie or fake things to me ...</i><br>--- huh! potato<br>what in your mind from start,, why should i need to act.<br>
-  i said you manytimes lying to you is like lying to myself<br>angel -_- baaah!!!! still you thinking im not real<br> 3 days back a girl(some random) in train asked my number i gave her my mother number<br>
-  still few saying im acting innocent it doesnt bother, and i helped a few amount of low grade students without expecting anything teachers call me im with a plan ,,, huh! peace is never an option<br>what run in mind is when you said im acting anjel and  im an actor<br> -_-  stupid potato<br>
-  <i>And if you choose to do social services that's good but I will say first you should help yourself.... </i><br>its not social service its an useful educational project...<br>
+  i said you manytimes lying to you is like lying to myself<br>angel -_- baaah!!!! still you thinking im not real<br> 3 days back a girl(some random sister from another college) in train asked my number i gave her my mother number<br>
+  still few saying im acting innocent it doesnt bother, and i helped a few amount of low grade students without expecting anything teachers call me im with a plan im not helping without expecting anything, huh! thats not a matter amd i dont care what they think<br>
+			   ,,, huh! peace is never an option<br> but you know<br>what running in mind is, stil when you said or call me, im acting anjel and  im an actor<br> -_-  stupid potato<br>
+  <i>And if you choose to do social services that's good but I will say first you should help yourself.... </i><br>its not social service its an useful educational project... which can give a outcome of something a great safety and security for girl's<br>
         <hr>
         
         <i>I am actually in a bab mood so don't mind if anything hurtful or rude I said in that privious response about the article and future and religion </i><br>
         -- i know its not rude or something, did you ever hurt me 🤦‍♂️<br>please be safe okay!!! <br><hr>
         <i>How is your health now ? </i><br>--- its little fine i guess<br>
           <i>  Take care of your self boy, don't fall sick .. be healthy </i><br>---okay maa sure  😊<br>and you also please take care of yourself<br> ALYSM <br><hr> 
-          now time is 7:10am  😬 , i forgot about, okay bye i will read and reply after reaching home and i need to bath  😬  😬  😬 <br>ikay bye be safe<br>
-          ittakimas<br>😒 if you again say im acting, i'll straight come to your place and bite you 😒😒😒<br> wannna get bite <br>😒😒😒 stupid dump potato<br>baaakkkaa<br>
-          stupid stupid stupid stupid<br>i dont care <br>baakakak stupid potato<br>lysm please be safe <br> i'll reply after reaching home stupud potato<br>-_-<br><br>ly_bs<br>
+          now time is 7:10am  😬 , i forgot about to ready 🤪🤪🤪 train exactly at 7:30 ok so bye still i didn't bath, dont fast 🧐, its only i have permission to it 🧐🧐🧐, okay bye i will read and reply after reaching home and i need to bath  😬  😬  😬 <br>ikay bye be safe<br>
+          ittakimas<br>😒 if you again say im acting, i'll straight come to your place and bite you 😒😒😒<br> wannna get bite <br>😒😒😒 stupid dump potato<br>baaakkkaa<br> i dont forget it 😑😑😑<br>
+			   stupid stupid <br> baakaa😑😑😑😒😒😒😒 <br>
+          stupid stupid stupid stupid<br>i dont care <br>baakakak stupid potato<br>lysm please be safe <br> i'll reply after reaching home stupud potato😑😑😑😑<br>-_-<br><br>ly_bs<br>
 
 <!--- end of pass--->
 
