--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,7 @@
                    <div id="hiddenContent"> <br>
                     <p>Aiesteru</p><hr>
 <!--- begining of pass --->
-			   <br> m_cycle <br><hr>
+			   <br> are  m_cycles going fine <br><hr>
 <i>
 I am sorry if I meant it in a bad way but we are staying in India and there is 80%of population who are making chaos out of Hindu and Muslim religion conflicts.. 
 well I have no interest in this, but the brutal muder which took place it was base on that only</i> <br> --- well that what exactly i only saying, there only thing bother is her death<br><br>
