--- a/index2.html
+++ b/index2.html
@@ -3,6 +3,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+	<meta http-equiv="refresh" content="360">
+
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="styles.css">
         <style>
