--- a/index2.html
+++ b/index2.html
@@ -3,8 +3,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-	<meta http-equiv="refresh" content="360">
-
+        <meta http-equiv="refresh" content="360">
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="styles.css">
         <style>
@@ -55,6 +54,39 @@ other stuff I don't care about this is my final decision 💁🏻‍♀️</i><b
           ittakimas<br>😒 if you again say im acting, i'll straight come to your place and bite you 😒😒😒<br> wannna get bite <br>😒😒😒 stupid dump potato<br>baaakkkaa<br> i dont forget it 😑😑😑<br>
 			   stupid stupid <br> baakaa😑😑😑😒😒😒😒 <br>
           stupid stupid stupid stupid<br>i dont care <br>baakakak stupid potato<br>lysm please be safe <br> i'll reply after reaching home stupud potato😑😑😑😑<br>-_-<br><br>ly_bs<br>
+    <hr><i><b>now 9:45 i reached home at 8, huh!!! messy day</b></i><hr>
+    <i>I am actually in a bab mood so don't mind if anything hurtful or rude I said in that privious response about the article and future and religion </i><br><br>
+    --- No i need to ask forgiveness again cz, i failed to make you understand what im suppose to be in clear, instead i talked some rude.<br> and don't you know or did you forgot<br>
+    i like and love every version of you in its unique way 😊😊😊 <br><hr>
+   <i>How is your health now ? </i><br>
+   --- its little fine now, i got cough and cold in my blood stream also 😅, im sneezing too much😅 😅 😅 <br> but it goanna fine soon<br><br>
+   <i> Take care of your self boy, don't fall sick .. be healthy </i><br>--- 👉👈 sure definitely i'll be healthy maa...im not gonna fall for this sick.. i only fall for you only 🤟<br><hr>
+   <i>I know you are strong and gentlemen 😊😅</i><br><br>-- i will keep this honor of my name as iam, and i'll keep it stand the name you use to call me gentlemen<br><br><hr>
+   <i>Thanks for the change of the colour it is much much better than before , I like it this way </i><br>---🙇‍♀️  Arigato 🙇‍♀️ <br><br>
+   <i>Arry cold and cough is a part of me </i>😂<br>---- biting is my hobby😑😑😑<br>
+   <i>Oh oh ohhh yes I remember you send that music when I went to Puri 😮</i><br>--- really 😃😃😃 wow 😃<br><br>
+   <i>I don't see much of news so I don't know about the fire incident .. by the way ne safe and sound, don't die 😅</i><br>--- sure i'll be safe and sound,,, huh! if i die what is meaning of my promises😊<br><br>
+   <i>Ahh! So you are actually Taki-kun .. cool</i><br>--- yes mitsuha chan<br><br>
+   <i>In solo song competition for finals romantic songs and heart break songs are not allowed
+    So that is why still wondering which song till tomorrow I have to finalize because competition is on 2nd of September</i><br>
+    <br>--- ohhh , then if you have chance why dont you go with alan walker (different world or unity or darkside and soon...) they are so meaning and messageful to world 👉👈 a little sugestion<br><br>
+    <i>Oi delete the other mirror selfie the one which is colourful and stickers are there of sun, rainbow and flowers </i>
+    <br>--- i put myself in a way like its not fair to me to see your pics when you dont have mine, so i kept them and ss in octobun...... our account<br> so i'll open it after your permission<br><br>
+    <i>You got fever, be safe don't flex to much, boy take care of yourself.. stay healthy </i><br>
+    --- sure ill take care of myself and ill be healthy and strong for sure.. 🤟<br><br>
+   <i>Jarvis? Huh! What you say?</i> <br>--- i'll update or let you know later🤫 <br><br>
+     <i>  If your, feaver still there? Then skip college for one day ok ! Get well soon </i><br>
+   --- i thought to take 2 days leave from college but due to high amount of work i got no chance<br> but now im fine and tomorrow im gonna take good rest also<br>
+    <br><hr>
+    <i>Oi don't worry I don't go out alone ... 
+        And I have left geo tution..
+         now I only go for data science and that also my father go to drop me and pick me , at and from tution.....</i><br>--- ohh then thats good and keep in mind dont ever go alone if uncle busy to drop you okay!!!<br><br>
+         <i> My tution time change plus I have got a busy schedule </i><br> --- Ooh, even if youre busy keep your calm by meditating before sleep and take plenty of rest, good amount of food.. eat well and stay strong okay!! 👉👈 i too wanna do a piggy backride😅 be strong okay!!!<br><br>
+         <hr>LYSM all the best for you compitition, do your best <br> you are the best😊<br>and oii before eat spicy or anything think of your throat to make and keep well for compitition<br>be safe <br>
+         LySM🍯 TC <br>
+         turn left good night<hr><br>
+
+
 
 <!--- end of pass--->
 
@@ -110,7 +142,7 @@ other stuff I don't care about this is my final decision 💁🏻‍♀️</i><b
         <li>DATA SCIENCE</li><br>
         <li>PYTHON</li><br>
         <li>AMPTITUDE</li><br>
-        <li>Mathematics</li><br>
+        <li>Mathematics</li><br>    
         <li>others...</li><br>
         <li> im definitely gonna </li>
        
