--- a/index2.html
+++ b/index2.html
@@ -82,7 +82,8 @@ other stuff I don't care about this is my final decision 💁🏻‍♀️</i><b
         And I have left geo tution..
          now I only go for data science and that also my father go to drop me and pick me , at and from tution.....</i><br>--- ohh then thats good and keep in mind dont ever go alone if uncle busy to drop you okay!!!<br><br>
          <i> My tution time change plus I have got a busy schedule </i><br> --- Ooh, even if youre busy keep your calm by meditating before sleep and take plenty of rest, good amount of food.. eat well and stay strong okay!! 👉👈 i too wanna do a piggy backride😅 be strong okay!!!<br><br>
-         <hr>LYSM all the best for you compitition, do your best <br> you are the best😊<br>and oii before eat spicy or anything think of your throat to make and keep well for compitition<br>be safe <br>
+         <hr>LYSM all the best for you compitition, do your best <br> you are the best😊<br>and oii before eat spicy or anything think of your throat to make and keep well for compitition<br>be safe <br><br>
+	<b>The Moon is Beautyful isn't it<br></b>		   
          LySM🍯 TC <br>
          turn left good night<hr><br>
 
