--- a/index2.html
+++ b/index2.html
@@ -69,7 +69,7 @@ other stuff I don't care about this is my final decision 💁🏻‍♀️</i><b
    <i>Ahh! So you are actually Taki-kun .. cool</i><br>--- yes mitsuha chan<br><br>
    <i>In solo song competition for finals romantic songs and heart break songs are not allowed
     So that is why still wondering which song till tomorrow I have to finalize because competition is on 2nd of September</i><br>
-    <br>--- ohhh , then if you have chance why dont you go with alan walker (different world or unity or darkside and soon...) they are so meaning and messageful to world 👉👈 a little sugestion<br><br>
+    <br>--- ohhh , then if you have chance why dont you go with, <br> "the greatest showman movie songs" or <br> alan walker (different world or unity or darkside and soon...) they are so meaning and messageful to world 👉👈 a little sugestion, <br> as you already sang a song from the greatest show man " why cant you re-perform it, i thought it may give you an emotional voice out when go with that one... <br><br>
     <i>Oi delete the other mirror selfie the one which is colourful and stickers are there of sun, rainbow and flowers </i>
     <br>--- i put myself in a way like its not fair to me to see your pics when you dont have mine, so i kept them and ss in octobun...... our account<br> so i'll open it after your permission<br><br>
     <i>You got fever, be safe don't flex to much, boy take care of yourself.. stay healthy </i><br>
