--- a/index2.html
+++ b/index2.html
@@ -25,8 +25,101 @@
                    <button id="showContentButton" class="buttonn"><b>OPEN</b></button>
                    <div id="hiddenContent"> <br>
                     <p>Aiesteru</p><hr>
+<br><br>
+
+<i>My Cycles are going fine I guess, last month at July I got in 30th💁🏻‍♀️</i><br><br> 
+--- wow thats great you got at 29th day to previous<br><br>
+<i>and rest you already have track 😐</i><br>---- yesss  😊<br><br>
+<i>Yaya I an being conser and careful and safe after all I an a lady.. don't worry </i><br><br>
+--- thats good but still be safe okay...<br><br>
+<i>You know what sometime it get hard to bring you as things are a big tough for me here</i><br>--- i everything okay???, ... but dont forget that youre a strong girl believe in yourself and share problem with god. and dont forget to let me know if i can help you in any way... <br> 
+<i> but I know you are nice Oh that's thoughtful of you, you are lot like me even I do like of this.. indeed a gentleman</i><br>👉👈 i guess im confusing to understand this tence can you please re write it<br>
+    <br><div class="mypap3" style="background-color: rgb(37, 33, 33);"><a href="https://forms.gle/y84RMg7SoHqhwRjH8"  ><span   >SAY  here</b> </span></a> </div>  <br>
+    <i>Wait I will give you 🕊️ peace, I will try..</i><br>😒chup!!! <br> i dont want peace i want my watermelon<br><br>
+    <i>I don't never ever want you to get hurt by me🥺</i><br>stupid potato -_- youuu!!!!!<br>
+    if you ever say you hurted me, i'll come and bite you..r...🧐😋 😝<br>🙄 in a little mess and seeing that sentence ("stop acting & lying").. it just stayed in my mind for a little<br>
+    just after a little i understood from your next message about your mood and understood it maybe cz of m_cycle near time<br>
+    just like all the time i said,.. im saying i never get hurt by you, i always love the way you are to me even it may high/low; good/bad; smart/stupid; child/wise; love/hate everything.. i love it all 😊<br>
+    and sorry for saying that way 🙄 last day<br>
+    it might take time to get understand me, for now forget me and my anjel_act_feel , <br>right now im just a weird nerd 😅...<br>
+    <b>oiii, try to be mindful and stay in more meditaional practice, cz it might i guesss, its getting time for allraival of next m_cycle <br>
+    so keep control your swings and mind in order to DO WELL in SINGING COMPETITION, <br>
+and save this music and listen to this in earphones when your mood enter a roller coster or unstable</b><br>
+<br><div class="mypap3" style="background-color: rgb(37, 33, 33);"><a href="https://youtu.be/UfcAVejslrU?si=Szqili6AeIyj-Tmd"  ><span   > click here </span></a> </div>  
+<i>No no you don't need forgiveness you wasn't wrong, I understood what you said 🙄 there is no misunderstanding ok ! </i><br>
+--- even if still im pretending to be wrong at anything or if i did anymistake dont hesitate just let me know i will try to change/correct it...<br>
+        <i>Daijobu😊</i><br>---👉👈 sure...<br><br><br><hr>
+        <i>Huh ! You like every version of me 😐😑BAKA !</i>--- and even more...  aren't i my potato😋<br><br>
+        <i> You getting to much cold 😐 
+            oi listen don't take cold water bath after coming from college and while taking bath don't wash your hairs daily, only do twice in a week , be well </i><br>
+            ---- okay, sure i only gonna wash hair twice only in a week, <br> -_- 😑 mother pulled my ear & shown me her super power 😅. last night for doing head bath with cold water after college<br>
+            <br> 🤷‍♂️🙆‍♂️ whatever in name mother it is universal.. now im fine maa dont worry<br><br>
+            <i>Will you stop flirting 😂 instead get healthy and wealthy 😉😂</i><br>--- 😑😑flirting😑😑  <br>
+
+            <div class="yato">
+                <a href="" ><img src="anger.jpg" class="yatoimg" /></a> </div>
+                <div style="margin-left: 5%;margin-right: 5%;"><p ><b><a href="" style="color:black;background-color: rgb(142, 255, 255);padding:3%;font-size:45px;border-radius: 30%;" >|- 😒OK😒FINE😒LEAVE😒  -|</a></b></p>      
+            </div>
+            <i>Nope no biti ng 😾</i><br>😑 bad bad 😑 i dont agree<br><br>
+            <i>Hai hai , I remembered almost all things of Puri , like you were still a weirdo, and I showed you my Naruto pen I bought and you showed one painting you redrew yourname that place and I was searching one song "some where only we know" etc etc</i>
+            <br> wow wowwwwww 😀 😃, potato remembered 😀 😃<br>
+            <div class="yato">
+                <a href="" ><img src="kitty.jpg" class="yatoimg" /></a> </div>
+                <div>|- this also 😀 😃  </div>
+            you know what i still have that castle one also 😊
+            <br<br>
+            <i>Oh wow you kept in octobuny so you don't see 😄 thats nice </i><br>its fair isn't it? 💁‍♂️ <br>
+            <i>You are huge compair to me and you want to ride me 😑</i><br> 😑😑i will show off with 6 pack😑😑<br><br>
+            <i>Hai , the moon is indeed beautiful as always 😊</i><br>AI always 😊😊😊<br><br>
+<hr>
+<i>Why Messy day?</i><br>--- 👉👈 you know right, that im with feaver and still going to college... <br> 
+i used to wear mask also , now due to feaver im wearing <br> and that when that random ask me for number&insta that time also im with fever and headache, that sis questioned me why you gaved your mother number while i asked you<br>
+i said , i don't want to affort storage for any new contact, then i moved to another block of train to stand.<br> i guess you know train construction right<br>
+there two boys from that girls college came to me and questioned me what im talking to her😑🤮🤮, they even tried to make argument with me, while im stay scilent they call me im posing attitude , 
+HUh!! , i said 'you are annoying, its better for you to leave  i'm instrested in your thing, better for you to minding your business' they are raising voice and keep saying stop acting cool😑 {these kids dont know my throat hurt when i talk due to feaver} don't show your attitude here, in this gap my_class mate came to join , 
+ aside train stop came then argument(reason less argument-no-one know the reason for this argument) end in middle<br>
+😑 but evening i reached to station at 5:30 and 6 were waiting for me there from that college , huh! im full at fever...  they were annpying again with argument none want to discuss what the conflict rather they only want fight <br> 
+bu that time a good wonder 2 of my seniors came to me and asked whats going i said a little by little <br> for the first a person from opposite group asked me what happened and how it started<br> i appriciated that guy <br>
+then one-of-two from morning said the girl is his GF 😑😑😑 baaH , till that time i dont realised why all ths from morning <br> then i said him ' that girl asked number ..  i gave mothers .. then again questioned for that.. i left' <br> then he straight to that girl and aksed <br>
+😂 🤣 you know what crazy she has affair with both two of my seniors 😂 🤣, <br>
+🙁 but u feel bad for that guy who wanted to fight with me, he said sorry to me after few time and started crying alone in last coach of train. i sit with him and tried to comfort then he sharedd me his paining saying that they are both loving from 2yrs<br> bu after the conflict he found , she's an boys hostel herself<br>
+<br>he said he gonna die🤮😑<br>i tried my best to help him to make, saying 'its not him to cry of feel bad when he done nothing wrong for such a thing she one suppose to feel guilty', <br> 
+😑😑😑 this guy so quick started posting insta break up stories infront of me 😑😑 5 minlater attitude stories 😑😑<br> people are really annoying <br> in this gap she called him on phone, he used so much of slang... then blocked her .. HUH!!! <br>
+after all he used my phone all, it power goes off 😑😑😑 ticket collector came - i only have (e-pass for train in phone) 😭😭😭 these two B***hes mad me pay a fine of 300rs 😭😭😭 <br> my train stop came i forgot my bag in somewhere in back coaches 😭😭 <br> i have fever cold and body pains 😭 <br> my 300rs 😭 <br>
+ I WALKED 3KM IN NIGHT NO TRANSPORT, phone got power off, aside sky is shouting loud thunders 😭😭 im scared in dark 😭😭, that time with my body temperature my anger also got high and rain started lights goes off im stupid choosed a shortcut to my place , 
+ huh!!! i started singing a song in that mood so loud and weird on road😑<br>
+<b><a  href="https://youtu.be/-NNIex1McWU?si=lm2sTjh5THiNudqo" style="font-size: 40px;">wanna hear click this text</a></b>
+<br>😑😑😑😑😑😑😑😑 dont laugh its not that bad i guess 😑😑😑😑😑 <br>
+
+ <br>,then  at after 8:15 or somwthing i reached home then fresh up replied to you a little then prayed and went to sleep<br>
+ <br>
+<b> Summary:<br></b>
+- i got bullied <br>
+- i got annoyed <br>
+- i got anger headache cold cough vomit body pain etc... <br>
+- i tried to help the on who tried to do wrong to me who bullied me : huh fine;  even his friends also left him that way, <br>
+- 😑 my phone, books, bag, mybody all wet and soaked, my throat left me after the song 😑<br>
+- i guess i explained everything in clear for my messy mood <br>
+- tell me if i did any 🙄wrong 👉👈 , if i did any wrong, sorry please do forgive me and tell me a way to correct it 🙄, all yesterday went up unexpected and i forgot umbrella at home🙄, let me know if you have any questions or doubts on this 🙄<br> <b>---Danish the foolish sailor stuck in train and suck in rain---</b><br>
+<br><div class="mypap3" style="background-color: rgb(37, 33, 33);"><a href="https://forms.gle/y84RMg7SoHqhwRjH8"  ><span   >Q/A section <b>click here</b> </span></a> </div>  <br><br>
+- oiii see i didnt hide anything i guess i said you all , and yes i forgot this morning i got 2 injections for high body temperature now its 8:40 its fine now. and i took meds also <br>
+and i ate also. im drinking hot water, bath also hot water, i guess i will go to sleep around 9:20pm <br><br>
+- please do forgive me its all happened accidental 🙄, and from next time i'll sure not to miss my station ill keep bag with me and i'll not give phone to anyone to help unless its emergency<br>
+forgive me please, i'll try to not geting repeat it again <br>
+definitely im sure about it<br>and i'll try to skip college the day when i get health issue i promise <br>
+please forgive me maa<br>
+🙄 now im going to sleep 
+
+
+               
+<hr><hr><hr>
+
+<hr>
+
+
 <!--- begining of pass --->
-			   <br> are  m_cycles going fine <br><hr>
+<br><br><br>
+<br> are  m_cycles going fine <br><hr>
 <i>
 I am sorry if I meant it in a bad way but we are staying in India and there is 80%of population who are making chaos out of Hindu and Muslim religion conflicts.. 
 well I have no interest in this, but the brutal muder which took place it was base on that only</i> <br> --- well that what exactly i only saying, there only thing bother is her death<br><br>
@@ -40,7 +133,7 @@ other stuff I don't care about this is my final decision 💁🏻‍♀️</i><b
    <i> <br> Where you want to be ,<br></i> ---the right question is when you in japan?.... my answers simply i said somanytimes in past, (its fast as possible)<br><br>
  <i>where you stand?</i><br>--- i dont gonna say im gonna show<br><br>
   <i>And hey stop acting like an angel, you don't have to lie or fake things to me ...</i><br>--- huh! potato<br>what in your mind from start,, why should i need to act.<br>
-  i said you manytimes lying to you is like lying to myself<br>angel -_- baaah!!!! still you thinking im not real<br> 3 days back a girl(some random sister from another college) in train asked my number i gave her my mother number<br>
+  i said you manytimes lying to you is like lying to myself<br>angel -_- baaah!!!! still you thinking im not real<br> 3 days back a girl(some random sister from another college) in train asked my number&insta i gave her my mother number<br>
   still few saying im acting innocent it doesnt bother, and i helped a few amount of low grade students without expecting anything teachers call me im with a plan im not helping without expecting anything, huh! thats not a matter amd i dont care what they think<br>
 			   ,,, huh! peace is never an option<br> but you know<br>what running in mind is, stil when you said or call me, im acting anjel and  im an actor<br> -_-  stupid potato<br>
   <i>And if you choose to do social services that's good but I will say first you should help yourself.... </i><br>its not social service its an useful educational project... which can give a outcome of something a great safety and security for girl's<br>
@@ -96,6 +189,7 @@ other stuff I don't care about this is my final decision 💁🏻‍♀️</i><b
  <br><div class="mypap3"><a href="https://youtu.be/zPlgynKYld0?feature=shared" ><span   ><b>Something... click here</b> </span></a> </div><br><br>
 
 			   <!--- end of sheets ------>
+
 	</div> </div>
         <div class="yato">
         <a href="" ><img src="yato-kamii.jpg" class="yatoimg" /></a> </div>
