--- a/index2.html
+++ b/index2.html
@@ -52,7 +52,7 @@
                         - your name <br>
                         - indilla and tailor swift love story <br>
                         - goblin - stay with me <br>
-                        - remedy <br>
+                        - alesso remedy <br>
                         - Shingeki gt 2013 <br>
                         - etc....<br>
                         <hr>
@@ -120,7 +120,7 @@
 
     <br><div class="mypap3" style="background-color: rgb(37, 33, 33);"><a href="https://forms.gle/y84RMg7SoHqhwRjH8"  ><span   >WANNA SAY SOMETHING TO <br> YATO <br> <b>click here</b> </span></a> </div>  
     <br><div class="mypap3"><a href="https://forms.gle/BYcWLsfzv9LyCBFRA" ><span   ><b>SENT A PICTURE click here</b> </span></a> </div><br><br>
- <br><div class="mypap3"><a href="https://youtu.be/zPlgynKYld0?feature=shared" ><span   ><b>Something... click here</b> </span></a> </div><br><br>
+ <br><div class="mypap3"><a href="https://youtu.be/vWK7m6w7yc4?si=92zQAE6Zp6QRxnDG" ><span   ><b>Something.. :) click here</b> </span></a> </div><br><br>
 
 			   <!--- end of sheets ------>
 
