--- a/index2.html
+++ b/index2.html
@@ -54,6 +54,8 @@
                         - goblin - stay with me <br>
                         - alesso remedy <br>
                         - Shingeki gt 2013 <br>
+			  - shininuganei wa<br>
+			   - alan walker <br>
                         - etc....<br>
                         <hr>
                         <br><br>
