--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,19 @@
 <br><br>
 
 <!-- begining of pass--->
-<br><br>
+<br><br><br><hr>
+			   30-08-2023: 5/08 AM
+			   <hr><br>
+			   please be safe and sound don't risk always please be careful. don't stay late nights. and see competetion is near so prepare well for it <br>
+			   and exams are also near so try to go on a schedule from weak to hard subs in a pattern. dont rush keep calm stay cool M'Lady<br>
+			   you can do it, do your best, you are the best always 😊<br>
+			   please be careful ok!!! pleasae<br>
+			   p;ease dont let yourself in troubles <br>
+			   <br>
+			   <hr>
+			   28-08-2023: 11/15 PM
+			   <hr
+				   <br>
 
                     <i>Hey you know what from July 20th I have been listening to the songs of your name and suzume ..
                          I even wrote suzume song in English verse and I carry it , 
