--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,11 @@
 <br><br>
 
 <!-- begining of pass--->
-<br><br><br><hr>
+<br><br>
+	    30-08-2023: 8:30PM <br>
+			   is everything okay!!!! <br>
+			   please be safe and sound<br>
+	    <br><hr>
 			   30-08-2023: 5/08 AM
 			   <hr><br>
 			   please be safe and sound don't risk always please be careful. don't stay late nights. and see competetion is near so prepare well for it <br>
