--- a/index2.html
+++ b/index2.html
@@ -27,6 +27,9 @@
 
 <!-- begining of pass--->
 <br><br>
+			   31-08-2023 : 5:17AM<br>
+			   please be sound and safe<br>
+			   <br<hr>
 	    30-08-2023: 8:30PM <br>
 			   is everything okay!!!! <br>
 			   please be safe and sound<br>
