--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
         </style>
     </head>
     <body>
-        <header style="text-align:center; font-size:40px;"><br> Konichiwa <br>
+        <header style="text-align:center; font-size:40px;"><br> Konichiwa <br> happy rakshabandhan ☺️<br>
             
 		<br>  <br></header> 
 
