--- a/index2.html
+++ b/index2.html
@@ -30,6 +30,9 @@
 			   31-08-2023 : 5:17AM<br>
 			   how is your health now?<br>
 			   please be sound and safe<br>
+			   31-08-2023 : 7:40PM<br>
+			   its been 3 days<br>
+			   p;ease tell me that you are safe and alright🥺<br>
 			   <br<hr>
 	    30-08-2023: 8:30PM <br>
 			   is everything okay!!!! <br>
